--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,12 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["*"],
-      "@components/*": ["components/*"],
-      "@pages/*": ["pages/*"],
-      "@headers/*": ["components/headers/*"],
-      "@common/*": ["common/*"]
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@shared/*": ["src/components/shared/*"],
+      "@models/*": ["src/models/*"]
     }
   }
 }
