--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
       "@shared/*": ["src/components/shared/*"],
-      "@models/*": ["src/models/*"]
+      "@models/*": ["src/models/*"],
+      "@contexts/*": ["src/contexts/*"]
     }
   }
 }
