--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev:db": "json-server --watch db.json --port 8888"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.16",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
